# mcp-core

./: .gitignore  pyproject.toml  readme.md
src/mcp_core/: __init__.py  cli.py  config.py  core.py  loader.py  server.py
src/mcp_core/helpers/: logger.py  parquet.py  sqlite.py
